--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "wxjs",
-  "version": "0.0.8",
+  "name": "wxjs2",
+  "version": "0.1.3",
   "description": "react版本的微信js基础服务",
   "keywords": [
-    "wxjs"
+    "wxjs2"
   ],
-  "homepage": "https://github.com/dxcweb/wxjs",
+  "homepage": "https://github.com/dxcweb/wxjs2",
   "maitainers": [
     "605863278@qq.com"
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/dxcweb/wxjs.git"
+    "url": "https://github.com/dxcweb/wxjs2.git"
   },
   "licenses": "MIT",
   "config": {
