--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wxjs2",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "react版本的微信js基础服务",
   "keywords": [
     "wxjs2"
@@ -25,6 +25,7 @@
   "devDependencies": {
     "babel-core": "^6.18.0",
     "clipboard": "^1.5.15",
+    "fs-loading": "^0.0.11",
     "lodash": "^4.16.4",
     "rc-tools": "5.x",
     "react": "^15.2.1",
